# SAMPLE_CALCULATOR

./: CMakeLists.txt  README.md  jenkins.sh
include/: debug.h  shared.h
source/: CMakeLists.txt  README.md  debug.cpp  main.cpp  shared.cpp
test/: CMakeLists.txt  debug_unittest.cpp  shared_unittest.cpp
